--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.68.0
 uvicorn==0.15.0
 jinja2==3.0.1
-aiofiles==0.7
+aiofiles==0.7.0
 python-multipart==0.0.5
+passlib==1.7.4
+pydantic[email]==1.8.2
+python-jose==3.3.0
