--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ jinja2==3.0.1
 aiofiles==0.7.0
 python-multipart==0.0.5
 passlib==1.7.4
-pydantic[email]==1.8.2
-python-jose==3.3.0
+pydantic==1.8.2
 bcrypt==3.2.0
-pylint==2.8.2
+python-jose==3.3.0
+cryptography==43.0.1
+pylint==3.3.0
