--- a/.pylintrc
+++ b/.pylintrc
@@ -116,6 +116,7 @@ unsafe-load-any-extension=no
 #verbose=
 
 [MASTER]
+ignore=auth.py,models.py
 ignore-patterns=
 
 ignored-modules=pydantic
@@ -414,7 +415,6 @@ logging-modules=logging
 
 
 [MESSAGES CONTROL]
-
 # Only show warnings with the listed confidence levels. Leave empty to show
 # all. Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE,
 # UNDEFINED.
@@ -445,6 +445,9 @@ disable=raw-checker-failed,
         use-symbolic-message-instead,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero,
+        import-error,
+        wrong-import-position,
+        duplicate-code,
         C0111,
         C0114,
         C0115,
